GNOME Bugzilla – Bug 777414
week-view: don't shrink events when start and end times are the same
Last modified: 2017-02-01 17:07:34 UTC
Created attachment 343687 [details] week-view timeless event (image) There is a possibility that the user may set (accidentally) the beginning and end of a event time to be the same. week-view should not shrink those events into a hardly clickable vertical line. How to reproduce: 1. Create a timed event 2. Let the beginning and end time be the same Result: A vertical line is shown in place of the event. Please see the attached screenshot
Note that this bug is not present if the duration is at least one minute.
Note also that there is a bug in giving rendering coordinates, which results in a Gtk-WARNING printed to command line: gtk_widget_size_allocate(): attempt to allocate widget with width -2147483648 and height 38
Created attachment 344358 [details] [review] week-grid: enforce a minimum width
Created attachment 344359 [details] [review] week-grid: make sure events span at least 1 minute When adding an event with the same start and end dates and times, the event effectively spans 0 minutes, leading a division by zero and causing varius UI glitches. Fix that by making sure events span at least 1 minute.
Review of attachment 344359 [details] [review]: Code change seems OK
Review of attachment 344358 [details] [review]: Code change seems OK
Thanks for the review. Attachment 344358 [details] pushed as e119d27 - week-grid: enforce a minimum width Attachment 344359 [details] pushed as cdc5bde - week-grid: make sure events span at least 1 minute